--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2024"
 [dependencies]
 cargo-ptest = "1.2.0"
 gpui = "0.2.0"
+serde = "1.0.228"
+serde_json = "1.0.145"
 zed-util = "0.2.0"
